<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#efefef"
        android:textSize="48sp"
        android:maxLength="12"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#F44336"
            android:text="@string/_7"
            android:onClick="onDigit"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#E91E63"
            android:text="@string/_8"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#9C27B0"
            android:text="@string/_9"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#CDDC39"
            android:text="@string/divide"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#2196F3"
            android:text="@string/_4"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#03A9F4"
            android:text="@string/_5"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#00BCD4"
            android:text="@string/_6"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMultiple"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#009688"
            android:text="@string/multiple"
            android:onClick="onDigit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#3F51B5"
            android:text="@string/_1"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#8BC34A"
            android:text="@string/_2"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#4CAF50"
            android:text="@string/_3"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#FFEB3B"
            android:text="@string/minus"
            android:onClick="onDigit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#FFC107"
            android:text="@string/decimal"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#FF9800"
            android:text="@string/_0"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:background="#FF5722"
            android:text="@string/clear"
            android:onClick="onDigit"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="#9C27B0"
            android:text="@string/plus"
            android:onClick="onDigit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:background="#03A9F4"
            android:text="@string/equal"/>

    </LinearLayout>

</LinearLayout>